@@ -1,3 +1,6 @@
+"558bec6aff68????????64a1????????5083ec14535657a1????????33c5508d45??64a3????????8d91":
+__thiscall void RoomConfigs::Unload();
+
 struct RoomConfigs
 {
     uint32_t stageId : 0x0; // 0x0
